--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md}'",
+    "lint": "eslint ."
   },
   "dependencies": {
     "expo": "~51.0.14",
@@ -17,6 +19,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
