--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -12,10 +12,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "expo": "~51.0.14",
+    "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "4.0.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-reanimated": "~3.10.1",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
