--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -12,29 +12,33 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
-    "@expo-google-fonts/roboto": "^0.2.3",
     "expo": "~51.0.14",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
     "nativewind": "4.0.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-reanimated": "~3.10.1",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.0.0",
+    "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.2",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  
+  "eslintConfig": {
+    "extends": ["expo", "eslint:recommended"]
+  }
 }
