--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -4,6 +4,7 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(node get_network_local_ip.js) expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -35,9 +36,5 @@
     "prettier": "^3.3.2",
     "typescript": "^5.1.3"
   },
-  "private": true,
-  
-  "eslintConfig": {
-    "extends": "universe/native"
-  }
+  "private": true
 }
