--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
+    "i18next": "^23.12.1",
     "react": "18.2.0",
+    "react-i18next": "^14.1.3",
     "react-native": "0.74.2"
   },
   "devDependencies": {
