--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.6.0",
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native": "^6.1.17",    
     "expo": "~51.0.14",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.12.1",
+    "nativewind": "4.0.1",
     "react": "18.2.0",
     "react-i18next": "^14.1.3",
     "react-native": "0.74.2",
-    "nativewind": "4.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "@types/react": "~18.2.45",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
