--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
-    "@react-navigation/native": "^6.1.17",    
+    "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.14",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
@@ -30,8 +31,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-plugin-module-resolver": "^5.0.2",
     "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^13.0.0",
