chore: add config google signin in app.json

--- a/Diaristando/app.json
+++ b/Diaristando/app.json
@@ -24,7 +24,13 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps.1085724072484-v7ah450nl276s2ukvt5c9c442651q4ad"
+        }
+      ]
     ]
   }
 }
