--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(node get_network_local_ip.js) expo start -c",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md}'",
     "lint": "eslint ."
