--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -5,28 +5,35 @@
   "scripts": {
     "start": "expo start",
     "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(node get_network_local_ip.js) expo start -c",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md}'",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^1.2.9",
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@expo/html-elements": "^0.10.1",
+    "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.14",
+    "expo-auth-session": "~5.5.2",
     "expo-font": "~12.0.7",
+    "expo-random": "~14.0.1",
+    "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.12.1",
     "nativewind": "4.0.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^14.1.3",
     "react-native": "0.74.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
