chore: Clerk plugin added

--- a/Diaristando/app.json
+++ b/Diaristando/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Diaristando",
     "slug": "Diaristando",
+    "scheme": "diaristando",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -12,25 +13,22 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.Diaristando"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "diaristando.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font",
-      [
-        "@react-native-google-signin/google-signin",
-        {
-          "iosUrlScheme": "com.googleusercontent.apps.1085724072484-v7ah450nl276s2ukvt5c9c442651q4ad"
-        }
-      ]
+      "expo-secure-store"
     ]
   }
 }
