--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "expo": "~51.0.14",
+    "expo-dev-client": "~4.0.20",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2"
