--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -26,12 +26,13 @@
     "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.12.1",
+    "nativewind": "4.0.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.3",
     "react-native": "0.74.2",
-    "nativewind": "4.0.35",
     "react-native-reanimated": "~3.10.1",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
