chore: lib for animations

--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -26,6 +26,7 @@
     "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.12.1",
+    "lottie-react-native": "6.7.0",
     "nativewind": "4.0.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
