--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "type": "module",
+    "start": "npx expo start",
     "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(node get_network_local_ip.js) expo start -c",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -16,6 +17,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/html-elements": "^0.10.1",
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.14",
@@ -25,6 +27,7 @@
     "expo-random": "~14.0.1",
     "expo-secure-store": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "formik": "^2.4.6",
     "i18next": "^23.12.1",
     "lottie-react-native": "6.7.0",
     "nativewind": "4.0.35",
@@ -32,12 +35,14 @@
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.3",
     "react-native": "0.74.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
