--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.14",
     "expo-auth-session": "~5.5.2",
     "expo-dev-client": "~4.0.20",
