--- a/Diaristando/app.json
+++ b/Diaristando/app.json
@@ -26,9 +26,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      "expo-font"
-    ],
+    "plugins": ["expo-font"],
     "extra": {
       "eas": {
         "projectId": "de6d6ec2-00a1-483a-a6e0-7386f866cf1f"
