--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -2,7 +2,6 @@
   "name": "diaristando",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
-  "type": "module",
   "scripts": {
     "start": "npx expo start",
     "start:wsl": "REACT_NATIVE_PACKAGER_HOSTNAME=$(node get_network_local_ip.js) expo start -c",
@@ -17,7 +16,8 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/html-elements": "^0.10.1",
     "@expo/metro-runtime": "~3.2.1",
-    "@react-native-picker/picker": "^2.8.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.11.0",
@@ -37,6 +37,7 @@
     "react-i18next": "^14.1.3",
     "react-native": "0.74.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.10.1",
