--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.14",
     "expo-auth-session": "~5.5.2",
     "expo-dev-client": "~4.0.20",
@@ -43,6 +44,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.4",
     "yup": "^1.4.0"
   },
