--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^1.2.9",
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@expo/html-elements": "^0.10.1",
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.0",
@@ -24,32 +23,25 @@
     "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.14",
     "expo-auth-session": "~5.5.2",
-    "expo-dev-client": "~4.0.20",
-    "expo-font": "~12.0.7",
-    "expo-random": "~14.0.1",
+    "expo-linking": "^6.3.1",
     "expo-secure-store": "^13.0.2",
-    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "^13.0.3",
     "formik": "^2.4.6",
     "i18next": "^23.12.1",
     "lottie-react-native": "6.7.0",
-    "nativewind": "4.0.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.3",
     "react-native": "0.74.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.10.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
-    "tailwindcss": "^3.4.4",
+    "styled-components": "^6.1.13",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/yup": "^0.32.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -57,9 +49,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^13.0.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
-    "react-native-dotenv": "^3.4.11",
-    "typescript": "^5.1.3"
+    "prettier": "^3.3.2"
   },
   "private": true
 }
