--- a/Diaristando/.gitignore
+++ b/Diaristando/.gitignore
@@ -14,6 +14,7 @@ android/
 *.p12
 *.key
 *.mobileprovision
+../.idea
 
 # Metro
 .metro-health-check*
@@ -27,9 +28,9 @@ yarn-error.*
 .DS_Store
 *.pem
 
-
 # Local env files
 .env*.local
+.env
 
 # TypeScript
 *.tsbuildinfo
