--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "babel-plugin-dotenv": "^0.1.1",
     "expo": "~51.0.14",
     "expo-auth-session": "~5.5.2",
     "expo-linking": "^6.3.1",
