--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2",
     "styled-components": "^6.1.13",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
     "@types/react": "~18.2.45",
