--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -29,19 +29,19 @@
     "expo-web-browser": "^13.0.3",
     "formik": "^2.4.6",
     "i18next": "^23.12.1",
-    "lottie-react-native": "6.7.0",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.3",
     "react-native": "0.74.2",
+    "react-native-maps": "1.14.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2",
     "styled-components": "^6.1.13",
-    "yup": "^1.4.0",
-    "react-native-maps": "1.14.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "~18.2.45",
