--- a/Diaristando/.env.example
+++ b/Diaristando/.env.example
@@ -1,1 +1,4 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=<CLERK_PUBLISHABLE_KEY>
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=<GOOGLE_MAPS_API_KEY>
+EXPO_PUBLIC_EAS_PROJECT_ID=<EAS_PROJECT_ID>
+EXPO_PUBLIC_PACKAGE_NAME=<PACKAGE_NAME>
