--- a/Diaristando/package.json
+++ b/Diaristando/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "babel-plugin-dotenv": "^0.1.1",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.14",
     "expo-auth-session": "~5.5.2",
     "expo-linking": "^6.3.1",
@@ -34,14 +35,14 @@
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.3",
     "react-native": "0.74.2",
+    "react-native-maps": "1.14.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2",
     "styled-components": "^6.1.13",
-    "yup": "^1.4.0",
-    "react-native-maps": "1.14.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "~18.2.45",
